--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.6.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "prando": "^5.1.1",
     "validator": "^11.1.0"
   },
   "devDependencies": {
